# fatestapi

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  cheat_sheet.md  docker-compose.yml  rust_sheet.md
migrations/: 001_create_users.sql
nginx/: nginx.conf
nginx/conf.d/: api.conf
performance/: 01_multi_layer_caching.md  02_connection_pooling.md  03_http2_compression.md  04_rate_limiting.md  05_async_io_tokio.md  06_structured_logging.md  07_prometheus_metrics.md  08_nginx_reverse_proxy_cache.md
prometheus/: prometheus.yml
scripts/: start.sh  test-api.sh
src/: cache.rs  config.rs  db.rs  error.rs  main.rs  metrics.rs  rate_limit.rs
